allowing brjs path to be set via a property in the init task and writing that to the gradle.properties file

--- a/build.gradle
+++ b/build.gradle
@@ -2,21 +2,31 @@ apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'java'
 
-ext.brjsSdkPath = "<path/to/your/BRJS/sdk/dir - e.g. /home/bob/brjs/1.0/sdk>"
-
+// Note: brjsSdkPath is set in gradle.properties
 dependencies {
-	compile fileTree(dir:ext.brjsSdkPath, include:"libs/java/system/*.jar")
+	if (project.hasProperty("brjsSdkPath"))		compile fileTree(dir:ext.brjsSdkPath, include:"libs/java/system/*.jar")
 }
 
 task init, dependsOn: [tasks.eclipse, tasks.idea], {
-	description "Creates directories for src and resources along with the META-INF/services for plugin definitions"
-	if (project.ext.brjsSdkPath.startsWith("<")) { throw new GradleException("You need to set 'brjsSdkPath' at the top of build.gradle before trying to run any tasks.")}
+	description "Creates Gradle properties file, directories for src and resources along with the META-INF/services for plugin definitions"
 	doFirst {
+		def brjsPropName = "brjs"
+		if (!project.hasProperty(brjsPropName))
+		{
+			throw new GradleException("Please supply the path to your BRJS sdk directory.\nFor example if your BRJS sdk dir is '/home/bob/brjs/1.0/sdk' run './gradlew init -P${brjsPropName}=/home/bob/brjs/1.0/sdk'.")
+		}
+		def brjsPropValue = project.property(brjsPropName)
+		def gradlePropsFile = file("gradle.properties")
+		if (gradlePropsFile.exists())
+		{
+			throw new GradleException("${gradlePropsFile.path} exists, meaning this project has probably already been initialised and can't be initialised again.")
+		}
+		gradlePropsFile.write("brjsSdkPath=${brjsPropValue}");
 		[file("src/main/java"), file("src/main/resources/META-INF/services"), file("src/test/java"), file("src/test/resources")].each {
 			if (!it.exists()) { it.mkdirs() }
 		}
 		println "\n"+
-	"src and resources directories created successfully, you can now delete the '${tasks.init.name}' task from build.gradle.\n"+
-	"Run './gradlew tasks' to view a list of tasks available via Gradle or read README.md for more info.\n"
+			"src and resources directories created successfully, you can now delete the '${tasks.init.name}' task from build.gradle.\n"+
+			"Run './gradlew tasks' to view a list of tasks available via Gradle or read README.md for more info.\n"
 	}
 }
